tests/toylang/neg/000877_mutation.toylang
program a = { a var : bool; } .
